Add Content-Type and make <title> be BINGO

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-	<title>Homework #3</title>
+	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+	<title>BINGO</title>
 	<link rel="stylesheet" type="text/css" media="screen" href="css/style.css">
 </head>
 <body>
