Improve the connection status

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 			</div>
 			<div class="card-body">
 				<p>
-					<button id="Izzy" class="host Izzy" value="Izzy" onclick="setWhoIam('Izzy','Shannon')">Izzy</button>
-					<button id="Shannon" class="host Shannon" value="Shannon" onclick="setWhoIam('Shannon','Izzy')">Shannon</button>
+					<button id="Izzy" class="host Izzy" value="Izzy" onclick="setSelf('Izzy'); setPeer('Shannon')">Izzy</button>
+					<button id="Shannon" class="host Shannon" value="Shannon" onclick="setSelf('Shannon'); setPeer('Izzy')">Shannon</button>
 				</p>
 				<p><button onclick="pickDog();">Pick a Bingo dog!</button></p>
 			</div>
