--- a/host.html
+++ b/host.html
@@ -7,34 +7,15 @@
 	<link rel='stylesheet' id='temp-fa-css'  href='//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css?ver=1.0.1.8' type='text/css' media='all' />
 	<link href="css/bingo.css" rel="stylesheet" type='text/css' media='all' >
 </head>
-<body>
+<body onload="setSelf('Host')">
 	<div class="row" id="content">
-		<div class="col-md-8">
+		<div class="col-md-12">
 			<div id="last-container">
 				<div class="called" id="last-called"></div>
 				<div id="last-called-description"></div>
 			</div>
 			<div id="decks">
 				<div class="card-deck" id="deck0"></div>
-			</div>
-		</div>
-		<div class="col-md-4">
-			<div class="card controls">
-				<div class="card-header">
-					<h1 class="card-title">Bingo•matic!</h1>
-				</div>
-				<div class="card-body">
-					<p>
-						<button id="Izzy" class="host Izzy" value="Izzy" onclick="setSelf('Izzy'); setPeer('Shannon')">Izzy</button>
-						<button id="Shannon" class="host Shannon" value="Shannon" onclick="setSelf('Shannon'); setPeer('Izzy')">Shannon</button>
-					</p>
-					<p><button onclick="pickDog();" id="pick-dog">Pick a Bingo dog!</button></p>
-					<p id="host-status" class="d-none">Connected to host!</p>
-					<p id="last-person"></p>
-				</div>
-				<div class="card-footer">
-					<button id="reset" onclick="reset()">New Game</button>
-				</div>
 			</div>
 		</div>
 	</div>
