--- a/user.html
+++ b/user.html
@@ -7,6 +7,27 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<link href="css/bingo.css" rel="stylesheet" type='text/css' media='all'>
+
+	<link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://bingo.happidraws.biz/images/favicon/apple-touch-icon-57x57.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://bingo.happidraws.biz/images/favicon/apple-touch-icon-114x114.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://bingo.happidraws.biz/images/favicon/apple-touch-icon-72x72.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://bingo.happidraws.biz/images/favicon/apple-touch-icon-144x144.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="60x60" href="https://bingo.happidraws.biz/images/favicon/apple-touch-icon-60x60.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="120x120" href="https://bingo.happidraws.biz/images/favicon/apple-touch-icon-120x120.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="76x76" href="https://bingo.happidraws.biz/images/favicon/apple-touch-icon-76x76.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://bingo.happidraws.biz/images/favicon/apple-touch-icon-152x152.png" />
+	<link rel="icon" type="image/png" href="https://bingo.happidraws.biz/images/favicon/favicon-196x196.png" sizes="196x196" />
+	<link rel="icon" type="image/png" href="https://bingo.happidraws.biz/images/favicon/favicon-96x96.png" sizes="96x96" />
+	<link rel="icon" type="image/png" href="https://bingo.happidraws.biz/images/favicon/favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="image/png" href="https://bingo.happidraws.biz/images/favicon/favicon-16x16.png" sizes="16x16" />
+	<link rel="icon" type="image/png" href="https://bingo.happidraws.biz/images/favicon/favicon-128.png" sizes="128x128" />
+	<meta name="application-name" content="Happi Draws™ Bingo!"/>
+	<meta name="msapplication-TileColor" content="#B66834" />
+	<meta name="msapplication-TileImage" content="https://bingo.happidraws.biz/images/favicon/mstile-144x144.png" />
+	<meta name="msapplication-square70x70logo" content="https://bingo.happidraws.biz/images/favicon/mstile-70x70.png" />
+	<meta name="msapplication-square150x150logo" content="https://bingo.happidraws.biz/images/favicon/mstile-150x150.png" />
+	<meta name="msapplication-wide310x150logo" content="https://bingo.happidraws.biz/images/favicon/mstile-310x150.png" />
+	<meta name="msapplication-square310x310logo" content="https://bingo.happidraws.biz/images/favicon/mstile-310x310.png" />
 </head>
 <body onload="setSelf('Guest')">
 	<noscript>
