--- a/user.html
+++ b/user.html
@@ -21,7 +21,7 @@
 	<link rel="icon" type="image/png" href="https://bingo.happidraws.biz/images/favicon/favicon-32x32.png" sizes="32x32" />
 	<link rel="icon" type="image/png" href="https://bingo.happidraws.biz/images/favicon/favicon-16x16.png" sizes="16x16" />
 	<link rel="icon" type="image/png" href="https://bingo.happidraws.biz/images/favicon/favicon-128.png" sizes="128x128" />
-	<meta name="application-name" content="Happi Draws™ Bingo!"/>
+	<meta name="application-name" content="Bingo!"/>
 	<meta name="msapplication-TileColor" content="#B66834" />
 	<meta name="msapplication-TileImage" content="https://bingo.happidraws.biz/images/favicon/mstile-144x144.png" />
 	<meta name="msapplication-square70x70logo" content="https://bingo.happidraws.biz/images/favicon/mstile-70x70.png" />
