--- a/host.html
+++ b/host.html
@@ -8,26 +8,26 @@
 	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<link href="css/bingo.css" rel="stylesheet" type='text/css' media='all'>
 
-	<link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://bingo.happidraws.bizapple-touch-icon-57x57.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://bingo.happidraws.bizapple-touch-icon-114x114.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://bingo.happidraws.bizapple-touch-icon-72x72.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://bingo.happidraws.bizapple-touch-icon-144x144.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="60x60" href="https://bingo.happidraws.bizapple-touch-icon-60x60.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="120x120" href="https://bingo.happidraws.bizapple-touch-icon-120x120.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="76x76" href="https://bingo.happidraws.bizapple-touch-icon-76x76.png" />
-	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://bingo.happidraws.bizapple-touch-icon-152x152.png" />
-	<link rel="icon" type="image/png" href="https://bingo.happidraws.bizfavicon-196x196.png" sizes="196x196" />
-	<link rel="icon" type="image/png" href="https://bingo.happidraws.bizfavicon-96x96.png" sizes="96x96" />
-	<link rel="icon" type="image/png" href="https://bingo.happidraws.bizfavicon-32x32.png" sizes="32x32" />
-	<link rel="icon" type="image/png" href="https://bingo.happidraws.bizfavicon-16x16.png" sizes="16x16" />
-	<link rel="icon" type="image/png" href="https://bingo.happidraws.bizfavicon-128.png" sizes="128x128" />
-	<meta name="application-name" content="Happi Draws™ Bingo!"/>
+	<link rel="apple-touch-icon-precomposed" sizes="57x57" href="https://bingo.happidraws.biz/images/favicon/apple-touch-icon-57x57.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="https://bingo.happidraws.biz/images/favicon/apple-touch-icon-114x114.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="https://bingo.happidraws.biz/images/favicon/apple-touch-icon-72x72.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="https://bingo.happidraws.biz/images/favicon/apple-touch-icon-144x144.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="60x60" href="https://bingo.happidraws.biz/images/favicon/apple-touch-icon-60x60.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="120x120" href="https://bingo.happidraws.biz/images/favicon/apple-touch-icon-120x120.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="76x76" href="https://bingo.happidraws.biz/images/favicon/apple-touch-icon-76x76.png" />
+	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="https://bingo.happidraws.biz/images/favicon/apple-touch-icon-152x152.png" />
+	<link rel="icon" type="image/png" href="https://bingo.happidraws.biz/images/favicon/favicon-196x196.png" sizes="196x196" />
+	<link rel="icon" type="image/png" href="https://bingo.happidraws.biz/images/favicon/favicon-96x96.png" sizes="96x96" />
+	<link rel="icon" type="image/png" href="https://bingo.happidraws.biz/images/favicon/favicon-32x32.png" sizes="32x32" />
+	<link rel="icon" type="image/png" href="https://bingo.happidraws.biz/images/favicon/favicon-16x16.png" sizes="16x16" />
+	<link rel="icon" type="image/png" href="https://bingo.happidraws.biz/images/favicon/favicon-128.png" sizes="128x128" />
+	<meta name="application-name" content="Bingo! (Host)"/>
 	<meta name="msapplication-TileColor" content="#B66834" />
-	<meta name="msapplication-TileImage" content="https://bingo.happidraws.bizmstile-144x144.png" />
-	<meta name="msapplication-square70x70logo" content="https://bingo.happidraws.bizmstile-70x70.png" />
-	<meta name="msapplication-square150x150logo" content="https://bingo.happidraws.bizmstile-150x150.png" />
-	<meta name="msapplication-wide310x150logo" content="https://bingo.happidraws.bizmstile-310x150.png" />
-	<meta name="msapplication-square310x310logo" content="https://bingo.happidraws.bizmstile-310x310.png" />
+	<meta name="msapplication-TileImage" content="https://bingo.happidraws.biz/images/favicon/mstile-144x144.png" />
+	<meta name="msapplication-square70x70logo" content="https://bingo.happidraws.biz/images/favicon/mstile-70x70.png" />
+	<meta name="msapplication-square150x150logo" content="https://bingo.happidraws.biz/images/favicon/mstile-150x150.png" />
+	<meta name="msapplication-wide310x150logo" content="https://bingo.happidraws.biz/images/favicon/mstile-310x150.png" />
+	<meta name="msapplication-square310x310logo" content="https://bingo.happidraws.biz/images/favicon/mstile-310x310.png" />
 </head>
 <body>
 	<noscript>
