--- a/index.html
+++ b/index.html
@@ -39,14 +39,18 @@
 			</div>
 		</div>
 	</noscript>
-	<div class="row" id="content">
+	<div class="row mx-auto" id="content">
 		<div class="col-md-12">
-			<div id="last-container">
-				<div class="called" id="last-called"></div>
-				<div id="last-called-description"></div>
+			<div class="row">
+				<div class="col-6" id="last-container">
+					<div class="called" id="last-called"></div>
+				</div>
+				<div class="col-6 my-auto">
+					<p id="last-called-description"></p>
+				</div>
 			</div>
 			<div id="decks">
-				<div class="card-deck" id="deck0"></div>
+				<div class="row" id="deck0"></div>
 			</div>
 		</div>
 	</div>
